Scaffold full rewrite
