# services/springboot/generated/src/main/java/org/openapitools/model/AIMessageRequest.java
@@ -1,0 +1,93 @@
+package org.openapitools.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import org.springframework.lang.Nullable;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * AIMessageRequest
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.22.0")
+public class AIMessageRequest {
+
+  private String query;
+
+  public AIMessageRequest() {
+    super();
+  }
+
+  /**
+   * Constructor with only required parameters
+   */
+  public AIMessageRequest(String query) {
+    this.query = query;
+  }
+
+  public AIMessageRequest query(String query) {
+    this.query = query;
+    return this;
+  }
+
+  /**
+   * Get query
+   * @return query
+   */
+  @NotNull 
+  @Schema(name = "query", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("query")
+  public String getQuery() {
+    return query;
+  }
+
+  @JsonProperty("query")
+  public void setQuery(String query) {
+    this.query = query;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    AIMessageRequest aiMessageRequest = (AIMessageRequest) o;
+    return Objects.equals(this.query, aiMessageRequest.query);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(query);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class AIMessageRequest {\n");
+    sb.append("    query: ").append(toIndentedString(query)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(@Nullable Object o) {
+    return o == null ? "null" : o.toString().replace("\n", "\n    ");
+  }
+}
+
