# services/springboot/generated/src/main/java/org/openapitools/model/AISession.java
@@ -1,0 +1,290 @@
+package org.openapitools.model;
+
+import java.net.URI;
+import java.util.Objects;
+import com.fasterxml.jackson.annotation.JsonProperty;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import java.time.OffsetDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.UUID;
+import org.openapitools.model.AIMessage;
+import org.springframework.format.annotation.DateTimeFormat;
+import org.springframework.lang.Nullable;
+import org.openapitools.jackson.nullable.JsonNullable;
+import java.time.OffsetDateTime;
+import jakarta.validation.Valid;
+import jakarta.validation.constraints.*;
+import io.swagger.v3.oas.annotations.media.Schema;
+
+
+import java.util.*;
+import jakarta.annotation.Generated;
+
+/**
+ * AISession
+ */
+
+@Generated(value = "org.openapitools.codegen.languages.SpringCodegen", comments = "Generator version: 7.22.0")
+public class AISession {
+
+  private UUID id;
+
+  private UUID userId;
+
+  private @Nullable UUID patientId;
+
+  private @Nullable UUID appointmentId;
+
+  private @Nullable String title;
+
+  @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME)
+  private OffsetDateTime createdAt;
+
+  @DateTimeFormat(iso = DateTimeFormat.ISO.DATE_TIME)
+  private OffsetDateTime updatedAt;
+
+  @Valid
+  private List<@Valid AIMessage> messages = new ArrayList<>();
+
+  public AISession() {
+    super();
+  }
+
+  /**
+   * Constructor with only required parameters
+   */
+  public AISession(UUID id, UUID userId, OffsetDateTime createdAt, OffsetDateTime updatedAt, List<@Valid AIMessage> messages) {
+    this.id = id;
+    this.userId = userId;
+    this.createdAt = createdAt;
+    this.updatedAt = updatedAt;
+    this.messages = messages;
+  }
+
+  public AISession id(UUID id) {
+    this.id = id;
+    return this;
+  }
+
+  /**
+   * Get id
+   * @return id
+   */
+  @NotNull @Valid 
+  @Schema(name = "id", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("id")
+  public UUID getId() {
+    return id;
+  }
+
+  @JsonProperty("id")
+  public void setId(UUID id) {
+    this.id = id;
+  }
+
+  public AISession userId(UUID userId) {
+    this.userId = userId;
+    return this;
+  }
+
+  /**
+   * Get userId
+   * @return userId
+   */
+  @NotNull @Valid 
+  @Schema(name = "userId", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("userId")
+  public UUID getUserId() {
+    return userId;
+  }
+
+  @JsonProperty("userId")
+  public void setUserId(UUID userId) {
+    this.userId = userId;
+  }
+
+  public AISession patientId(@Nullable UUID patientId) {
+    this.patientId = patientId;
+    return this;
+  }
+
+  /**
+   * Get patientId
+   * @return patientId
+   */
+  @Valid 
+  @Schema(name = "patientId", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("patientId")
+  public @Nullable UUID getPatientId() {
+    return patientId;
+  }
+
+  @JsonProperty("patientId")
+  public void setPatientId(@Nullable UUID patientId) {
+    this.patientId = patientId;
+  }
+
+  public AISession appointmentId(@Nullable UUID appointmentId) {
+    this.appointmentId = appointmentId;
+    return this;
+  }
+
+  /**
+   * Get appointmentId
+   * @return appointmentId
+   */
+  @Valid 
+  @Schema(name = "appointmentId", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("appointmentId")
+  public @Nullable UUID getAppointmentId() {
+    return appointmentId;
+  }
+
+  @JsonProperty("appointmentId")
+  public void setAppointmentId(@Nullable UUID appointmentId) {
+    this.appointmentId = appointmentId;
+  }
+
+  public AISession title(@Nullable String title) {
+    this.title = title;
+    return this;
+  }
+
+  /**
+   * Get title
+   * @return title
+   */
+  
+  @Schema(name = "title", requiredMode = Schema.RequiredMode.NOT_REQUIRED)
+  @JsonProperty("title")
+  public @Nullable String getTitle() {
+    return title;
+  }
+
+  @JsonProperty("title")
+  public void setTitle(@Nullable String title) {
+    this.title = title;
+  }
+
+  public AISession createdAt(OffsetDateTime createdAt) {
+    this.createdAt = createdAt;
+    return this;
+  }
+
+  /**
+   * Get createdAt
+   * @return createdAt
+   */
+  @NotNull @Valid 
+  @Schema(name = "createdAt", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("createdAt")
+  public OffsetDateTime getCreatedAt() {
+    return createdAt;
+  }
+
+  @JsonProperty("createdAt")
+  public void setCreatedAt(OffsetDateTime createdAt) {
+    this.createdAt = createdAt;
+  }
+
+  public AISession updatedAt(OffsetDateTime updatedAt) {
+    this.updatedAt = updatedAt;
+    return this;
+  }
+
+  /**
+   * Get updatedAt
+   * @return updatedAt
+   */
+  @NotNull @Valid 
+  @Schema(name = "updatedAt", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("updatedAt")
+  public OffsetDateTime getUpdatedAt() {
+    return updatedAt;
+  }
+
+  @JsonProperty("updatedAt")
+  public void setUpdatedAt(OffsetDateTime updatedAt) {
+    this.updatedAt = updatedAt;
+  }
+
+  public AISession messages(List<@Valid AIMessage> messages) {
+    this.messages = messages;
+    return this;
+  }
+
+  public AISession addMessagesItem(AIMessage messagesItem) {
+    if (this.messages == null) {
+      this.messages = new ArrayList<>();
+    }
+    this.messages.add(messagesItem);
+    return this;
+  }
+
+  /**
+   * Get messages
+   * @return messages
+   */
+  @NotNull @Valid 
+  @Schema(name = "messages", requiredMode = Schema.RequiredMode.REQUIRED)
+  @JsonProperty("messages")
+  public List<@Valid AIMessage> getMessages() {
+    return messages;
+  }
+
+  @JsonProperty("messages")
+  public void setMessages(List<@Valid AIMessage> messages) {
+    this.messages = messages;
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    AISession aiSession = (AISession) o;
+    return Objects.equals(this.id, aiSession.id) &&
+        Objects.equals(this.userId, aiSession.userId) &&
+        Objects.equals(this.patientId, aiSession.patientId) &&
+        Objects.equals(this.appointmentId, aiSession.appointmentId) &&
+        Objects.equals(this.title, aiSession.title) &&
+        Objects.equals(this.createdAt, aiSession.createdAt) &&
+        Objects.equals(this.updatedAt, aiSession.updatedAt) &&
+        Objects.equals(this.messages, aiSession.messages);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(id, userId, patientId, appointmentId, title, createdAt, updatedAt, messages);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class AISession {\n");
+    sb.append("    id: ").append(toIndentedString(id)).append("\n");
+    sb.append("    userId: ").append(toIndentedString(userId)).append("\n");
+    sb.append("    patientId: ").append(toIndentedString(patientId)).append("\n");
+    sb.append("    appointmentId: ").append(toIndentedString(appointmentId)).append("\n");
+    sb.append("    title: ").append(toIndentedString(title)).append("\n");
+    sb.append("    createdAt: ").append(toIndentedString(createdAt)).append("\n");
+    sb.append("    updatedAt: ").append(toIndentedString(updatedAt)).append("\n");
+    sb.append("    messages: ").append(toIndentedString(messages)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(@Nullable Object o) {
+    return o == null ? "null" : o.toString().replace("\n", "\n    ");
+  }
+}
+
